--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: My Workflow
+name: Conditional Workflow
 
 on: [push]
 
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
-        run: echo "This is Job 1"
+        run: exit 1  # Симулируем неудачное выполнение
 
   job2:
     runs-on: ubuntu-latest
     needs: job1
-    if: always()  # Выполнять job2 всегда после job1
+    if: failure()  # Выполнять job2 только в случае неудачи job1
     steps:
       - name: Step 1
         run: echo "This is Job 2"
@@ -20,26 +20,8 @@ jobs:
   job3:
     runs-on: ubuntu-latest
     needs: job1
-    if: always()  # Выполнять job3 всегда после job1
+    if: success()  # Выполнять job3 только в случае успеха job1
     steps:
       - name: Step 1
         run: echo "This is Job 3"
-
-  choose_job:
-    runs-on: ubuntu-latest
-    needs: [job2, job3]
-    if: always()  # Выполнять этот job всегда после job2 и job3
-    steps:
-      - name: Select Job
-        id: select_job
-        run: |
-          echo "Choose which job to run next:"
-          echo "1. Job 2"
-          echo "2. Job 3"
-          echo "::set-output name=selected_job::$(read)"
-      - name: Run Selected Job
-        if: steps.select_job.outputs.selected_job == '1'
-        run: echo "Running Job 2"
-      - name: Run Selected Job
-        if: steps.select_job.outputs.selected_job == '2'
-        run: echo "Running Job 3"
+        
