--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Conditional Workflow
+name: Interactive Workflow
 
 on: [push]
 
@@ -7,21 +7,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Step 1
-        run: exit 1  # Симулируем неудачное выполнение
+        run: echo "This is Job 1"
 
-  job2:
+  choose_job:
     runs-on: ubuntu-latest
     needs: job1
-    if: failure()  # Выполнять job2 только в случае неудачи job1
+    if: always()
     steps:
-      - name: Step 1
-        run: echo "This is Job 2"
-
-  job3:
-    runs-on: ubuntu-latest
-    needs: job1
-    if: success()  # Выполнять job3 только в случае успеха job1
-    steps:
-      - name: Step 1
-        run: echo "This is Job 3"
+      - name: Select Job
+        id: select_job
+        run: |
+          echo "Choose which job to run next:"
+          echo "1. Job 2"
+          echo "2. Job 3"
+          echo "::set-env name=SELECTED_JOB::$(read)"
+      - name: Run Selected Job
+        if: env.SELECTED_JOB == '1'
+        run: echo "Running Job 2"
+      - name: Run Selected Job
+        if: env.SELECTED_JOB == '2'
+        run: echo "Running Job 3"
         
