--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,24 +8,24 @@ jobs:
     steps:
       - name: Step 1
         run: echo "This is Job 1"
+        id: job1
+        continue-on-error: true
 
   choose_job:
     runs-on: ubuntu-latest
     needs: job1
     if: always()
-    shell: /usr/bin/bash
-    env:
-      SELECTED_JOB: ${{ env.SELECTED_JOB }}
     steps:
       - name: Select Job
         run: |
           echo "Choose which job to run next:"
           echo "1. Job 2"
           echo "2. Job 3"
-          echo "SELECTED_JOB=$(read)" >> $GITHUB_ENV
+          read SELECTED_JOB
+          echo "SELECTED_JOB=$SELECTED_JOB" >> $GITHUB_ENV
       - name: Run Selected Job
         run: |
-          SELECTED_JOB="$SELECTED_JOB"  # Получаем значение переменной из файла среды
+          SELECTED_JOB=$SELECTED_JOB
           if [ "$SELECTED_JOB" == "1" ]; then
             echo "Running Job 2"
           elif [ "$SELECTED_JOB" == "2" ]; then
@@ -34,4 +34,3 @@ jobs:
             echo "Invalid selection: $SELECTED_JOB"
             exit 1
           fi
-          
